[gd_scene load_steps=7 format=3 uid="uid://cm2m8w1ua6mjt"]

[ext_resource type="Script" path="res://scenes/guns/grenade_launcher.gd" id="1_7q5hx"]
[ext_resource type="Script" path="res://scenes/guns/AttacksParabollicaly.gd" id="2_34evp"]
[ext_resource type="Script" path="res://scenes/guns/SeesClosestParabollicaly.gd" id="3_6ao6y"]
[ext_resource type="Texture2D" uid="uid://foyybv82obwi" path="res://assets/guns.png" id="4_21u0i"]
[ext_resource type="AudioStream" uid="uid://c2yhp4wjhq8kr" path="res://assets/SFX and BGM/Shots/Shot1.mp3" id="5_plvq7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lscwh"]
radius = 800.0

[node name="GrenadeLauncher" type="Node2D"]
script = ExtResource("1_7q5hx")

[node name="AttacksParabollicaly" type="Node" parent="."]
script = ExtResource("2_34evp")

[node name="Timer" type="Timer" parent="AttacksParabollicaly"]
wait_time = 3.0
autostart = true

[node name="SeesClosestParabollicaly" type="Node" parent="."]
script = ExtResource("3_6ao6y")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("4_21u0i")
region_enabled = true
region_rect = Rect2(0, 32, 32, 32)

[node name="Barrel" type="Sprite2D" parent="."]
position = Vector2(-8, 0)
rotation = 3.14159
texture = ExtResource("4_21u0i")
offset = Vector2(11, 0)
region_enabled = true
region_rect = Rect2(32, 32, 32, 32)

[node name="BulletStartPoint" type="Marker2D" parent="Barrel"]
position = Vector2(25, -2.18557e-06)
rotation = 3.14159

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_lscwh")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_plvq7")

[connection signal="timeout" from="AttacksParabollicaly/Timer" to="AttacksParabollicaly" method="_on_timer_timeout"]
